// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer should render correctly 1`] = `
"<span class=\\"\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span>"
`;

exports[`Spacer should support x and y 1`] = `
"<div><span class=\\"\\" x=\\"5\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" x=\\"15\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" y=\\"15\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" y=\\"2\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span></div>"
`;

exports[`Spacer should work with float 1`] = `
"<div><span class=\\"\\" x=\\"2.2\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" x=\\"1.5\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" y=\\"0.1\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span><span class=\\"\\" y=\\"1.8\\"><style>
        span {
          display: block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span></div>"
`;

exports[`Spacer should work with inline mode 1`] = `
"<span class=\\"\\"><style>
        span {
          display: inline-block;
          width: calc(1 * 16px);
          height: calc(1 * 16px);
          padding: 0 0 0 0;
          margin: 0 0 0 0;
        }
      </style></span>"
`;
